@@ -1,5 +1,5 @@
 AUX klick-0.12.2-sconstruct.patch 1645 SHA256 1f07ab0093307388c47fad3f0e8731642612150229aec5ad07f6e7becceee4ac SHA512 02d114d9e147168e266f55bf011aad535a2afc225e782ebae00e25265a661126e8d2b8a6be4aef6b9e2b1b0b1adb8bf28b357be3b09b3ca7355c33c78de991df WHIRLPOOL d3fefdd29f3c546a1862fc42042dac7b60e8d0e5f2ac6c7c827bcdf81c8a914e31c617f389272ecde1111b4906780789ebe49a2c527ef0effa99ec6b3df4afd2
 DIST klick-0.12.2.tar.gz 111801 SHA256 1289533c0849b1b66463bf27f7ce5f71736b655cfb7672ef884c7e6eb957ac42 SHA512 e0da321b4f5573e8a0b7ef53a554bf33b6d999b7125c62648d5ad64278107b429effa573187327d7c6fe5ae07bf9c7f81b96f069358315b2ee9166480f6dae7f WHIRLPOOL 4baf1e8fad212c26568a2190af42b1d23058c780407bdd3523b03339337f1f3408f612718c29f026997d36b3aceb3cacd5cfc5ff4d4e69c9cd4edb9a72696590
-EBUILD klick-0.12.2.ebuild 1090 SHA256 93f8d585786b3b96f79f265f836eeef5812e0be69cefa1ae497e3f961ec6860e SHA512 8c6d16e1c8f2ac6772a583a285cfa0106223d146bafe86700ec9e859312707b7cc57bbe8b1bc9948aa58c035a0289db28ff3a140d379bcde4fc4c0d940fc5cce WHIRLPOOL b7ea960a414fc6fe116fe8fedb61f3386c71714153f06bb4a3d59be7862eb542908b718a0b36cce182ebbf1faf15981be852d2131fadb085cbd3b62611972247
-MISC ChangeLog 642 SHA256 11da5bdafa971b561c69340ee6205c517f866ff7f06a6c3728f199ec166dca00 SHA512 d3e41c5dddee45c1f50c40b99b530e28fbc8b4682cbff6b418f86bff42cc6c0e4e87185bb050ceec96c90bdd0089a63db06210d7f9c2ac710c364faa46e77001 WHIRLPOOL 5c97d10ad6fbd11bea1e169b797417f52b0d12cee553971591c667a1c91ddc02b50c54c964fd8d077de56ed70c143d575b720b0a0d7fd7421d68f51b457e1123
+EBUILD klick-0.12.2.ebuild 1089 SHA256 1993adf7c7c0b2e7b39f231971e214ca14f700b1232e3a3be10ff7889674c126 SHA512 851c730f9354d79db95eed0847160b4c1f6e40b2779b2b4049bc5cbd3060f9fe5e6ff0d6895f96b9201d1c8ab9516b69474bab768e2e714e71b04d932781277b WHIRLPOOL 0886ddfa7ac9089d3a7a4e90316fc423dba35097e27b0e2ecbc5e92a96f187cddb16909921d3518c03fc91ea333b5e828271e3dcfb1d10005bb01bbc3334c88d
+MISC ChangeLog 768 SHA256 208bea3c5b365180e745fb9acd452ace6511352bdaf43697b790b8a00aeba076 SHA512 2a9e27c501018a154050e8e1464227887ad3acbd50973fe05e613337b9c08048652b9d3012cff47236eba29c93a48b43f875d6ad18ca0eff962120d0874c25bf WHIRLPOOL 7531996d54f8d88ebd8904105c57653278f85a12d7453eedc786c800ae8842e87d904ded8249de9ca0ca15ef44f0ca1d732b7bd078ab32f6304291abd9a66710
 MISC metadata.xml 320 SHA256 d306ff5666d314a6433f245c90c99fa1c4b8c809046c0baa1d2a63293a714d43 SHA512 3ba70c1fd21a722d6ff4230b535f9fc791eb4109e49221604de6f56bc318488712b0c77025fb00b9f44d8e8bcde57eb6b80222adb86faff07b4d71c9f471d81d WHIRLPOOL 412fcbf1ec4633879d290ec94e8db35fc8e950b1cf563b51e03a5086f8c7ff50b5349219cb629633fca8ed5652c5a38ca21943fccdaa309387f5cb00f5ee71ef
